# ML_compilers

./: .bashrc  .gitignore  CS521_MP1_colab.ipynb  CS521_MP1_gpu_colab.ipynb
gpu/: CMakeLists.txt
mp1/cpu/: CMakeLists.txt  gemm_cpu.cpp
mp1/gpu/: gemm_gpu.cu
mp2/gpu/: myconv.py  myconv_inductor.py  myconv_jax.py  run_inductor_expt.py  run_inductor_profile.py  run_jax_profile.py  run_torch_profile.py
mp2/gpu/jax-traces/plugins/profile/2025_10_07_08_35_24/: ip-172-31-28-22.us-west-2.compute.internal.xplane.pb
mp2/gpu/jax-traces/plugins/profile/2025_10_07_08_35_58/: ip-172-31-28-22.us-west-2.compute.internal.xplane.pb
mp2/gpu/jax-traces/plugins/profile/2025_10_07_08_36_01/: ip-172-31-28-22.us-west-2.compute.internal.xplane.pb
mp2/gpu/jax-traces/plugins/profile/2025_10_07_08_36_04/: ip-172-31-28-22.us-west-2.compute.internal.xplane.pb
mp2/gpu/jax-traces/plugins/profile/2025_10_07_08_36_08/: ip-172-31-28-22.us-west-2.compute.internal.xplane.pb
mp2/npu/: conv_npu.py  profile1_float16.neff  profile1_float32.neff  profile_final1_float16.neff  profile_final1_float16.ntff  profile_final1_float32.neff  profile_final1_float32.ntff  profile_final2_float16.neff  profile_final2_float16.ntff  profile_final2_float32.neff  profile_final2_float32.ntff  profile_final3_float16.neff  profile_final3_float16.ntff  profile_final3_float32.neff  profile_final3_float32.ntff  profile_final_float16.neff  profile_final_float16.ntff  profile_final_float32.neff  profile_final_float32.ntff  temp1.py  temp2.py  temp3.py
(+7 files in other folders)
